--- a/css/style.css
+++ b/css/style.css
@@ -1063,7 +1063,7 @@ Back To Top Section
   margin-bottom: 20px; }
   .box-icon-1 .icon {
     display: inline-block;
-    color: #46c2ca;
+    color: #00538c;
     font-size: 36px;
     line-height: 43px;
     float: left; }
