--- a/sass/global.scss
+++ b/sass/global.scss
@@ -768,7 +768,7 @@ Back To Top Section
 	overflow: hidden;
 	text-indent: 100%;
 	white-space: nowrap;
-	background: rgba($color_3, 1) url('../images/cd-top-arrow.svg') no-repeat center 50%;
+	background: rgba($color_3, 1) url('../images/uparrow.png') no-repeat center 50%;
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: opacity .3s 0s, visibility 0s .3s;
