--- a/css/style.css
+++ b/css/style.css
@@ -903,7 +903,7 @@ Back To Top Section
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  background: #ed1c24 url("../images/cd-top-arrow.svg") no-repeat center 50%;
+  background: #ed1c24 url("../images/uparrow.png") no-repeat center 50%;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity .3s 0s, visibility 0s .3s;
